src/objects/Request__c/fields/ChM_Target_Group_Change_Impact__c.field-meta.xml
<CustomField>
    <fullName>ChM_Target_Group_Change_Impact__c</fullName>
    <description>Feld indicates if there is any impact out of the requirement to End or Key user</description>
    <label>ChM Target Group / Change Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Key User</fullName>
            </value>
            <value>
                <fullName>No Change Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>