src/objects/Request__c/fields/Customization_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Customization_Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customization Approval Date</label>
    <type>DateTime</type>
</CustomField>