src/objects/Request__c/fields/Customization_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Customization_Approved_By__c</fullName>
    <label>Customization Approved By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>C-Steering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>