src/objects/Request__c/fields/Customization_Level__c.field-meta.xml
<CustomField>
    <fullName>Customization_Level__c</fullName>
    <inlineHelpText>Not Applicable = no customization needed 
Low = low effort to implement &amp; simple to maintain
Medium = high effort to implement &amp; simple to maintain
High = high effort to implement &amp; difficult to maintain</inlineHelpText>
    <label>Customization Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>