src/objects/Request__c/fields/Impacted_Teams__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Teams__c</fullName>
    <inlineHelpText>Select other teams impacted by this requirement.</inlineHelpText>
    <label>Impacted Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
            <value>
                <fullName>Interfaces/ETL</fullName>
            </value>
            <value>
                <fullName>Org Strategy/Sales Hierarchy</fullName>
            </value>
            <value>
                <fullName>Accounts, Leads, Contacts</fullName>
            </value>
            <value>
                <fullName>Doc Strategy</fullName>
            </value>
            <value>
                <fullName>Sales Process</fullName>
            </value>
            <value>
                <fullName>LoA</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Encryption</fullName>
            </value>
            <value>
                <fullName>Digital Sales</fullName>
            </value>
            <value>
                <fullName>CMD Pack 4</fullName>
            </value>
            <value>
                <fullName>CPQ - Direct NSW</fullName>
            </value>
            <value>
                <fullName>CPQ - Direct MN</fullName>
            </value>
            <value>
                <fullName>CPQ - QtC CQ</fullName>
            </value>
            <value>
                <fullName>CPQ - Indirect</fullName>
            </value>
            <value>
                <fullName>CPQ - Masterdata</fullName>
            </value>
            <value>
                <fullName>CPQ - NPI MN</fullName>
            </value>
            <value>
                <fullName>CPQ - NPI NSW</fullName>
            </value>
            <value>
                <fullName>CPQ - NPI FN</fullName>
            </value>
            <value>
                <fullName>CPQ - NPI ION</fullName>
            </value>
            <value>
                <fullName>CPQ - NPI All</fullName>
            </value>
            <value>
                <fullName>CPQ - Direct ION</fullName>
            </value>
            <value>
                <fullName>CPQ - Enterprise</fullName>
            </value>
            <value>
                <fullName>CPQ - Architecture &amp; Integration</fullName>
            </value>
            <value>
                <fullName>CPQ - Capabilities</fullName>
            </value>
            <value>
                <fullName>CPQ Analytics</fullName>
                <isActive>false</isActive>
                <label>CPQ Analytics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>