src/objects/Request__c/fields/Sprint_Release__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Release__c</fullName>
    <formula>Sprint__r.Release__r.Name</formula>
    <inlineHelpText>Release to which the Sprint is associated</inlineHelpText>
    <label>Sprint Release</label>
    <type>Text</type>
</CustomField>