src/objects/Request__c/fields/StartTime_Approved_Emergency_Release__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Approved_Emergency_Release__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>StartTime_Approved Emergency Release</label>
    <type>DateTime</type>
</CustomField>