src/objects/Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the request</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identify: New Requirement</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Identify: New Requirement</label>
            </value>
            <value>
                <fullName>Identify: Submit for Business Review</fullName>
                <color>#FF0000</color>
                <label>Identify: Submit for Business Review</label>
            </value>
            <value>
                <fullName>Identify: Deferred</fullName>
                <color>#E27001</color>
                <label>Identify: Deferred</label>
            </value>
            <value>
                <fullName>Consolidate: Approve to Estimate</fullName>
                <color>#FF0000</color>
                <label>Consolidate: Approve to Estimate</label>
            </value>
            <value>
                <fullName>Consolidate: Level of Effort Complete</fullName>
                <color>#FF0000</color>
                <label>Consolidate: Level of Effort Complete</label>
            </value>
            <value>
                <fullName>Consolidate: Submit for CCB Review</fullName>
                <color>#FF0000</color>
                <label>Consolidate: Submit for CCB Review</label>
            </value>
            <value>
                <fullName>Approve: Approved to Deploy</fullName>
                <color>#FF0000</color>
                <label>Approve: Approved to Deploy</label>
            </value>
            <value>
                <fullName>Release: Design</fullName>
                <color>#0B24BE</color>
                <label>Release: Design</label>
            </value>
            <value>
                <fullName>Release: Build</fullName>
                <color>#419249</color>
                <label>Release: Build</label>
            </value>
            <value>
                <fullName>Release: Test</fullName>
                <color>#B6E32E</color>
                <label>Release: Test</label>
            </value>
            <value>
                <fullName>Release: SIT</fullName>
                <color>#641CCF</color>
                <label>Release: SIT</label>
            </value>
            <value>
                <fullName>Release: UAT</fullName>
                <color>#F96FB7</color>
                <label>Release: UAT</label>
            </value>
            <value>
                <fullName>Release: Build Production</fullName>
                <color>#2F5D85</color>
                <label>Release: Build Production</label>
            </value>
            <value>
                <fullName>Release: Test Production</fullName>
                <color>#AFCADF</color>
                <label>Release: Test Production</label>
            </value>
            <value>
                <fullName>Close: Deployed</fullName>
                <color>#8F6429</color>
                <label>Close: Deployed</label>
            </value>
            <value>
                <fullName>Close: Rejected</fullName>
                <color>#EFAE73</color>
                <label>Close: Rejected</label>
            </value>
            <value>
                <fullName>Close: Duplicate</fullName>
                <color>#57F17C</color>
                <label>Close: Duplicate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>