src/objects/Request__c/recordTypes/Requirement.recordType-meta.xml
<RecordType>
    <fullName>Requirement</fullName>
    <active>true</active>
    <label>Requirement</label>
</RecordType>