src/objects/Request__c/validationRules/ClosedDeferredReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedDeferredReasonRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        OR(
              ISPICKVAL
                      (Status__c, &quot;Close: Rejected&quot;),
               ISPICKVAL
                      ( Status__c ,&quot;Identify: Deferred&quot;)
               ),

(ISPICKVAL(Closed_Deferred__c,&quot;&quot;)
)    )</errorConditionFormula>
    <errorDisplayField>Closed_Deferred__c</errorDisplayField>
    <errorMessage>You must pick a value for the Closed/Deferred Reason.</errorMessage>
</ValidationRule>