src/objects/Request__c/validationRules/Customization_Approved_By_Req_if_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Customization_Approved_By_Req_if_Approve</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Customization_Approved__c  = TRUE,ISPICKVAL( Customization_Approved_By__c, &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Customization_Approved_By__c</errorDisplayField>
    <errorMessage>Customization Approved By is required if Customization Approved is selected.</errorMessage>
</ValidationRule>