src/objects/Request__c/validationRules/Customization_Level_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customization_Level_Required</fullName>
    <active>true</active>
    <description>Customization Level required once requirement is estimated.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL
(Status__c, &quot;Consolidate: Level of Effort Complete&quot;),
ISPICKVAL
(Status__c, &quot;Consolidate: Submit for CCB Review&quot;),
ISPICKVAL
(Status__c, &quot;Approve: Approved to Deploy&quot;),
ISPICKVAL
(Status__c, &quot;Release: Design&quot;),
ISPICKVAL
(Status__c ,&quot;Release: Build&quot;)
),

(ISPICKVAL(Customization_Level__c, &quot;&quot;)
))</errorConditionFormula>
    <errorDisplayField>Customization_Level__c</errorDisplayField>
    <errorMessage>Customization Level is required for this status.</errorMessage>
</ValidationRule>