src/objects/Request__c/validationRules/Development_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Development_Type_Required</fullName>
    <active>true</active>
    <description>Development Type required once requirement is estimated.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL
(Status__c, &quot;Consolidate: Level of Effort Complete&quot;),
ISPICKVAL
(Status__c, &quot;Consolidate: Submit for CCB Review&quot;),
ISPICKVAL
(Status__c, &quot;Approve: Approved to Deploy&quot;),
ISPICKVAL
(Status__c, &quot;Release: Design&quot;),
ISPICKVAL
(Status__c ,&quot;Release: Build&quot;)
),

(ISNULL(Request_Type__c)
))</errorConditionFormula>
    <errorDisplayField>Request_Type__c</errorDisplayField>
    <errorMessage>Development Type is required for this status.</errorMessage>
</ValidationRule>