src/objects/Request__c/validationRules/RemovedFromSprint.validationRule-meta.xml
<ValidationRule>
    <fullName>RemovedFromSprint</fullName>
    <active>true</active>
    <description>If Checkbox is checked, removed from sprint must be populated</description>
    <errorConditionFormula>Removed_Sprint__c = TRUE &amp;&amp;  Sprint_Removed_From__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Sprint_Removed_From__c</errorDisplayField>
    <errorMessage>You must provide the Sprint that the Requirement was removed from.</errorMessage>
</ValidationRule>