src/objects/Request__c/validationRules/Scoped_Reqt_Cant_be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Scoped_Reqt_Cant_be_Edited</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Status__c) , 
OR( 
ISPICKVAL(Status__c, &quot;Approve: Approved to Deploy&quot;), 
ISPICKVAL(Status__c, &quot;Release: Design&quot;), 
ISPICKVAL(Status__c, &quot;Release: Build&quot;), 
ISPICKVAL(Status__c, &quot;Release: Test&quot;), 
ISPICKVAL(Status__c, &quot;Release: SIT&quot;), 
ISPICKVAL(Status__c, &quot;Release: UAT&quot;), 
ISPICKVAL(Status__c, &quot;Release: Build Production&quot;), 
ISPICKVAL(Status__c, &quot;Release: Test Production&quot;), 
ISPICKVAL(Status__c, &quot;Close: Deployed&quot;) 
), 
$User.CompanyName &lt;&gt; &quot;Accenture&quot;, 
RIGHT($User.Email, 13) &lt;&gt; &quot;accenture.com&quot;, 
RIGHT($User.Username, 13) &lt;&gt; &quot;accenture.com&quot;, 
$User.CompanyName &lt;&gt; &quot;Salesforce&quot;, 

$User.Id &lt;&gt; &quot;00558000001VOQD&quot;, 
$User.Id &lt;&gt; &quot;00558000001VDle&quot;, 
$User.Id &lt;&gt; &quot;00558000001UVe0&quot;, 
$User.Id &lt;&gt; &quot;00541000005ZnvR&quot;, 
$User.Id &lt;&gt; &quot;005410000067OFJ&quot;, 
$User.Id &lt;&gt; &quot;005410000054MFR&quot;,
$User.Id &lt;&gt; &quot;00541000007h8C1&quot;,
$User.Id &lt;&gt; &quot;00541000007hD85&quot;,	
$User.Id &lt;&gt; &quot;0052M000008bsnU&quot;,
$User.Id &lt;&gt; &quot;0052M000008qqwn&quot;,	
$Profile.Id &lt;&gt; &quot;00e58000000Rh5P&quot; 

)</errorConditionFormula>
    <errorMessage>Please work with your scrum team to update requirements which have already been scoped.</errorMessage>
</ValidationRule>