src/objects/Request__c/validationRules/StatusClosedDuplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusClosedDuplicate</fullName>
    <active>true</active>
    <description>When Status is Closed:Duplicate the Related Request field should not blank</description>
    <errorConditionFormula>AND(
     (ISPICKVAL(Status__c, &quot;Close: Duplicate&quot;)),
     (ISBLANK(Related_Request__c))
    )</errorConditionFormula>
    <errorDisplayField>Related_Request__c</errorDisplayField>
    <errorMessage>You must provide Related Request Value</errorMessage>
</ValidationRule>