src/objects/Request__c/validationRules/Technical_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Description_Required</fullName>
    <active>true</active>
    <description>Technical Description is required once a requirement has been estimated.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL
(Status__c, &quot;Consolidate: Level of Effort Complete&quot;),
ISPICKVAL
(Status__c, &quot;Consolidate: Submit for CCB Review&quot;),
ISPICKVAL
(Status__c, &quot;Approve: Approved to Deploy&quot;),
ISPICKVAL
(Status__c, &quot;Release: Design&quot;),
ISPICKVAL
(Status__c ,&quot;Release: Build&quot;)
),

(ISBLANK( Technical_Description__c )
))</errorConditionFormula>
    <errorDisplayField>Technical_Description__c</errorDisplayField>
    <errorMessage>Technical Description is required for this status.</errorMessage>
</ValidationRule>