src/objects/Request__c/listViews/ACL_Sprint_113_VT.listView-meta.xml
<ListView>
    <fullName>ACL_Sprint_113_VT</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>DeveloperAssigned__c</columns>
    <columns>TotEst__c</columns>
    <columns>Status__c</columns>
    <columns>User_Story__c</columns>
    <columns>Feature__c</columns>
    <columns>Delivery_Team__c</columns>
    <columns>Impacted_Teams__c</columns>
    <columns>Team__c</columns>
    <columns>Target_Deployment_Date__c</columns>
    <columns>UAT_Planned_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Account</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>contains</operation>
        <value>Sprint 14</value>
    </filters>
    <label>ACL Sprint 13 VT</label>
</ListView>