src/objects/Request__c/listViews/ACL_Sprint_13_VT.listView-meta.xml
<ListView>
    <fullName>ACL_Sprint_13_VT</fullName>
    <booleanFilter>(1 OR 2 OR 3) AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>DeveloperAssigned__c</columns>
    <columns>TotEst__c</columns>
    <columns>Status__c</columns>
    <columns>User_Story__c</columns>
    <columns>Feature__c</columns>
    <columns>Delivery_Team__c</columns>
    <columns>Impacted_Teams__c</columns>
    <columns>Team__c</columns>
    <columns>Target_Deployment_Date__c</columns>
    <columns>UAT_Planned_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Account</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>Hierarchy</value>
    </filters>
    <filters>
        <field>Delivery_Team__c</field>
        <operation>equals</operation>
        <value>Org Strategy/Sales Hierarchy,&quot;Accounts, Leads, Contacts&quot;</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Identify: Deferred,Close: Rejected,Close: Duplicate</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>contains</operation>
        <value>Sprint 13</value>
    </filters>
    <label>ACL Sprint 13 VT</label>
    <language>en_US</language>
</ListView>