src/objects/Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Team__c</columns>
    <columns>Request_Title__c</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>DeveloperAssigned__c</columns>
    <columns>Business_Benefit__c</columns>
    <columns>Request_Description__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Feature_Release__c</columns>
    <columns>Agile_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>renaud</value>
    </filters>
    <label>My Requirements (All)</label>
    <language>en_US</language>
</ListView>