src/objects/Request__c/listViews/Approval_Process.listView-meta.xml
<ListView>
    <fullName>Approval_Process</fullName>
    <columns>NAME</columns>
    <columns>Request_Description__c</columns>
    <columns>Team__c</columns>
    <columns>Agile_Status__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Approvals/IWA</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>SCRM Sprint 6</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Duplicate</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Rejected</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Deployed</value>
    </filters>
    <label>Approval Process</label>
    <language>en_US</language>
</ListView>