src/objects/Request__c/listViews/CoE_requirements_for_Feb_Release.listView-meta.xml
<ListView>
    <fullName>CoE_requirements_for_Feb_Release</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>Requirement_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Delivery_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>EEC Sprint 1,EEC Sprint 2,ERM Sprint 2,CSR Sprint 2</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request__c.Requirement</value>
    </filters>
    <label>CoE requirements for Feb Release</label>
    <sharedTo>
        <group>CoE_PT</group>
    </sharedTo>
</ListView>