src/objects/Request__c/listViews/CPQ_Configure_Release_1.listView-meta.xml
<ListView>
    <fullName>CPQ_Configure_Release_1</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>User_Story__c</columns>
    <columns>Status__c</columns>
    <columns>Demo_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>CPQ</value>
    </filters>
    <filters>
        <field>Feature__c</field>
        <operation>equals</operation>
        <value>O2Q - Release 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Release: Design,Release: Build,Release: Test,Release: SIT,Release: UAT,Release: Build Production,Release: Test Production,Close: Deployed</value>
    </filters>
    <label>CPQ - Configure - Release 1</label>
    <language>en_US</language>
</ListView>