src/objects/Request__c/listViews/CPQ_Configure_Release_3.listView-meta.xml
<ListView>
    <fullName>CPQ_Configure_Release_3</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <columns>User_Story__c</columns>
    <columns>Status__c</columns>
    <columns>Sprint__c</columns>
    <columns>DeveloperAssigned__c</columns>
    <columns>Development_priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>CPQ</value>
    </filters>
    <filters>
        <field>Feature__c</field>
        <operation>equals</operation>
        <value>Configure - Release 3</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Rejected</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Rejected,Close: Duplicate</value>
    </filters>
    <label>CPQ - Configure - Release 3</label>
    <language>en_US</language>
</ListView>