src/objects/Request__c/listViews/CPQ_Direct_Enahncement_Requirements.listView-meta.xml
<ListView>
    <fullName>CPQ_Direct_Enahncement_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Request_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Title__c</field>
        <operation>startsWith</operation>
        <value>[Enhancement]</value>
    </filters>
    <filters>
        <field>Gap_Object__c</field>
        <operation>equals</operation>
        <value>Enhancement</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>CPQ Direct</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>contains</operation>
        <value>Backlog</value>
    </filters>
    <label>CPQ Direct Enhancement Requirements</label>
    <language>en_US</language>
</ListView>